# win-screenshot

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: capture_window_rect.rs
examples/: main.rs
src/: addon.rs  capture.rs  lib.rs  prelude.rs  tests.rs  utils.rs  wrappers.rs
