[package]
name = "win-screenshot"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Take a screenshot from specified window or whole display on Windows platform"
readme = "README.md"
repository = "https://github.com/h04x/win-screenshot"
homepage = "https://github.com/h04x/win-screenshot"
documentation = "https://docs.rs/win-screenshot"
authors = ["h04x <distract.doctrine@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "libloaderapi",
    "handleapi", "psapi", "errhandlingapi", "impl-default", "utilapiset", "winerror"] }

