[package]
name = "win-screenshot"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Take a screenshot from specified window or entire screen on Windows platform"
readme = "README.md"
repository = "https://github.com/h04x/win-screenshot"
homepage = "https://github.com/h04x/win-screenshot"
documentation = "https://docs.rs/win-screenshot"
authors = ["h04x <distract.doctrine@gmail.com>"]
keywords = ["screenshot", "display", "window", "windows", "screen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]


[dependencies]
image = "0.24"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "libloaderapi",
    "handleapi", "psapi", "errhandlingapi", "impl-default", "utilapiset", "winerror"] }

