[package]
name = "win-screenshot"
version = "3.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Take a screenshot from specified window or entire screen on Windows platform"
readme = "README.md"
repository = "https://github.com/h04x/win-screenshot"
homepage = "https://github.com/h04x/win-screenshot"
documentation = "https://docs.rs/win-screenshot"
authors = ["h04x <distract.doctrine@gmail.com>"]
keywords = ["screenshot", "display", "window", "windows", "screen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]


[dependencies]
windows = { version = "0.46", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_Xps"] }

[dev-dependencies]
image = "0.24"
regex = "1"
criterion = "0.4"
qshot = "0.1"

[[bench]]
name = "capture_window_rect"
harness = false

